--- a/website/src/App.css
+++ b/website/src/App.css
@@ -46,10 +46,78 @@ h1 {
 }
 
 img {
+  width: 100%;
   max-width: 100%;
   height: auto;
+  border-radius: 0.5rem;
 }
 
+.image-wrapper {
+  position: relative;
+}
+.text-wrapper {
+  margin-top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 0.5rem;
+}
+
+.text-wrapper h3 {
+  padding: 3rem;
+  text-align: center;
+  color: #fff;
+}
+
+/*.text-wrapper::after {*/
+/*background: rgba(0, 0, 0, 0.2);*/
+/*position: absolute;*/
+/*[>top: 0;<]*/
+/*[>right: 0;<]*/
+/*[>bottom: 0;<]*/
+/*[>left: 0;<]*/
+/*}*/
+
+.text-wrapper p {
+  text-align: center;
+  color: #fff;
+}
+
+.text-wrapper:hover {
+  background: rgba(0, 0, 0, 0);
+  color: #000;
+  /*position: absolute;*/
+  /*top: 0;*/
+  /*right: 0;*/
+  /*bottom: 0;*/
+  /*left: 0;*/
+  transition: all 0.5s;
+  transform: scale1.01;
+}
+
+.text-wrapper:hover .title {
+  color: rgba(0, 0, 0, 0);
+}
+
+.text-wrapper:hover .description {
+  color: rgba(0, 0, 0, 0);
+}
+
+.img-text-wrapper {
+  position: absolute;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  text-align: center;
+  padding-left: 100px;
+  padding-right: 100px;
+}
 .product-grid {
   display: grid;
   grid-gap: 2rem;
@@ -63,8 +131,8 @@ img {
 }
 
 .product-grid-item {
-  background: #fff;
-  padding: 2rem;
+  background: #000;
+  /*padding: 2rem;*/
   display: grid;
   border-radius: var(--border-radius);
   box-shadow: var(--shadow);
@@ -72,6 +140,7 @@ img {
 
 .product-grid-item img {
   height: 240px;
+  position: relative;
 }
 
 .product-grid-item button {
