--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --shadow: 5px 7px 2px #04000d;
+  --shadow: 5px 7px 2px #000;
   --border-radius: 0.5rem;
 }
 
@@ -9,8 +9,12 @@
 
 body {
   margin: 0;
-  background: #7846ed url("bg.jpg") top left repeat;
+  background-image: url("bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: absolute;
   font-family: Arial, Helvetica, sans-serif;
+  min-height: 100vw;
 }
 
 .container {
@@ -18,6 +22,7 @@ body {
   margin: 0 auto;
   padding-left: 1rem;
   padding-right: 1rem;
+  margin-bottom: 4rem;
 }
 
 /*navbar*/
@@ -27,6 +32,7 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
+  margin-top: 3rem;
 }
 
 .flex-nav li {
@@ -45,11 +51,46 @@ h1 {
   text-align: center;
 }
 
+.text {
+  color: #fff;
+  font-size: 2rem;
+  text-align: center;
+}
+
 img {
   width: 100%;
   max-width: 100%;
   height: auto;
   border-radius: 0.5rem;
+}
+
+.circle {
+  background-image: url(./images/profile-picture-300x300.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 20rem;
+  width: 20rem;
+  background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: red;
+  padding: 0;
+  border-radius: 50%;
+  border: 0.3rem solid #fff;
+  margin-bottom: 4rem;
+}
+
+.square {
+  background-image: url(./images/231-2312557_500-instagram-logo-instagram-logo-white-vector.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 4rem;
+  width: 4rem;
+  background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0;
+  margin-bottom: 5rem;
 }
 
 .image-wrapper {
@@ -62,7 +103,7 @@ img {
   position: absolute;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.4);
   border-radius: 0.5rem;
 }
 
