--- a/website/src/App.css
+++ b/website/src/App.css
@@ -14,6 +14,8 @@ body {
   background-size: cover;
   background-position: absolute;
   font-family: Arial, Helvetica, sans-serif;
+  line-height: 1;
+  font-weight: bold;
   min-height: 100vw;
 }
 
@@ -64,6 +66,14 @@ img {
   border-radius: 0.5rem;
 }
 
+button {
+  width: 101%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 0.5rem;
+}
 .circle {
   background-image: url(./images/profile-picture-300x300.jpg);
   background-position: center;
@@ -73,14 +83,13 @@ img {
   background-size: cover;
   margin-left: auto;
   margin-right: auto;
-  background-color: red;
   padding: 0;
   border-radius: 50%;
   /*border: 0.3rem solid #fff;*/
   margin-bottom: 4rem;
 }
 
-.square {
+.insta-logo {
   background-image: url(./images/231-2312557_500-instagram-logo-instagram-logo-white-vector.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -103,14 +112,17 @@ img {
   position: absolute;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0);
   border-radius: 0.5rem;
 }
 
 .text-wrapper h3 {
-  padding: 3rem;
+  /*padding: 3rem;*/
+  padding-bottom: 1rem;
   text-align: center;
-  color: #fff;
+  margin-top: 2.5rem;
+  color: rgba(0, 0, 0, 0);
+  transition: all 0.5s;
 }
 
 /*.text-wrapper::after {*/
@@ -124,11 +136,13 @@ img {
 
 .text-wrapper p {
   text-align: center;
-  color: #fff;
+  color: rgba(0, 0, 0, 0);
+  transition: all 0.5s;
+  transform: scale1.01;
 }
 
 .text-wrapper:hover {
-  background: rgba(0, 0, 0, 0);
+  background: rgba(0, 0, 0, 0.6);
   color: #000;
   /*position: absolute;*/
   /*top: 0;*/
@@ -140,11 +154,24 @@ img {
 }
 
 .text-wrapper:hover .title {
-  color: rgba(0, 0, 0, 0);
+  color: #fff;
 }
 
 .text-wrapper:hover .description {
-  color: rgba(0, 0, 0, 0);
+  color: #fff;
+}
+
+.text-wrapper:hover .download-icon {
+  background-image: url(./images/download-icon-white-png-1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 4rem;
+  width: 4rem;
+  background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2rem;
+  padding: 0;
 }
 
 .img-text-wrapper {
@@ -187,16 +214,16 @@ img {
   position: relative;
 }
 
-.product-grid-item button {
-  display: block;
-  background: #fec401;
-  border-radius: var(--border-radius);
-  border: none;
-  width: 100%;
-  padding: 1rem;
-  font-size: 1rem;
-  transition: 300ms background;
-}
+/*.product-grid-item button {*/
+/*display: block;*/
+/*background: #fec401;*/
+/*border-radius: var(--border-radius);*/
+/*border: none;*/
+/*width: 100%;*/
+/*padding: 1rem;*/
+/*font-size: 1rem;*/
+/*transition: 300ms background;*/
+/*}*/
 
 .product-grid-item button:hover {
   cursor: pointer;
